[package]
name = "avalanche-evm-gasless-transaction"
version = "0.0.0"
edition = "2021"
rust-version = "1.68"
description = "Avalanche EVM gasless transaction examples"

[[bin]]
name = "avalanche-evm-gasless-transaction"
path = "src/main.rs"

[dependencies]
avalanche-types = { version = "0.0.338", features = ["jsonrpc_client", "evm", "wallet", "wallet_evm"] } # https://crates.io/crates/avalanche-types
clap = { version = "4.2.1", features = ["cargo", "derive"] }
crossterm = "0.26.1"
dialoguer = "0.10.4"
env_logger = "0.10.0"
ethers = { version = "=2.0.2", features = ["eip712"] } # https://github.com/gakonst/ethers-rs/releases
ethers-core = "=2.0.2"
ethers-providers = { version = "=2.0.2" } # https://github.com/gakonst/ethers-rs/releases
ethers-signers = "=2.0.2"
hex = "0.4.3"
log = "0.4.17"
primitive-types = "0.12.1" # https://crates.io/crates/primitive-types
serde_json = "1.0.95" # https://github.com/serde-rs/json/releases
tokio = { version = "1.27.0", features = ["full"] }

# https://github.com/cross-rs/cross/wiki/Recipes#openssl
openssl = { version = "0.10", features = ["vendored"] }
